// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageDomains should render 1`] = `
<div
  class="css-oqpjdc"
  data-testid="manage-domains"
>
  <div
    class="css-7dgci6"
  />
  <table
    class="css-pg3j7d"
  >
    <thead>
      <tr>
        <th
          class="css-c37hkt"
        >
          Name
        </th>
        <th
          class="css-c37hkt"
        >
          Type
        </th>
        <th
          class="css-c37hkt"
        >
          Modified Date
        </th>
        <th
          class="css-19r8pbt"
        >
          Product Master Id
        </th>
        <th
          class="css-19r8pbt"
        >
          Audit
        </th>
        <th
          class="css-19r8pbt"
        >
          AWS Account #
        </th>
        <th
          class="css-19r8pbt"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          home.mujibur
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          Personal
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          2018-01-31 19:43 UTC
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-0"
              name="selfServe-0"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-0"
            />
          </div>
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          111111
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
      </tr>
      <tr>
        <td
          class="css-1vs2r4p"
          color=""
        >
          home.pgote
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          Personal
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          2018-02-15 00:48 UTC
        </td>
        <td
          class="css-84znvz"
          color=""
        />
        <td
          class="css-84znvz"
          color=""
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-1"
              name="selfServe-1"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-1"
            />
          </div>
        </td>
        <td
          class="css-84znvz"
          color=""
        >
          14913436251
        </td>
        <td
          class="css-84znvz"
          color=""
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ManageDomains should render no domain 1`] = `
<div
  class="css-oqpjdc"
  data-testid="manage-domains"
>
  <div
    class="css-7dgci6"
  />
  <table
    class="css-pg3j7d"
  >
    <thead>
      <tr>
        <th
          class="css-c37hkt"
        >
          Name
        </th>
        <th
          class="css-c37hkt"
        >
          Type
        </th>
        <th
          class="css-c37hkt"
        >
          Modified Date
        </th>
        <th
          class="css-19r8pbt"
        >
          Product Master Id
        </th>
        <th
          class="css-19r8pbt"
        >
          Audit
        </th>
        <th
          class="css-19r8pbt"
        >
          AWS Account #
        </th>
        <th
          class="css-19r8pbt"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          home.mujibur
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          Personal
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          2018-01-31 19:43 UTC
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-0"
              name="selfServe-0"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-0"
            />
          </div>
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          111111
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
      </tr>
      <tr>
        <td
          class="css-1vs2r4p"
          color=""
        >
          home.mujibur.test
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          Sub domain
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          2018-02-15 00:48 UTC
        </td>
        <td
          class="css-84znvz"
          color=""
        />
        <td
          class="css-84znvz"
          color=""
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-1"
              name="selfServe-1"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-1"
            />
          </div>
        </td>
        <td
          class="css-84znvz"
          color=""
        >
          14913436251
        </td>
        <td
          class="css-84znvz"
          color=""
        >
          <svg
            class="css-u87f64"
            data-testid="icon"
            height="1.25em"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ManageDomains should render personal domain 1`] = `
<div
  class="css-oqpjdc"
  data-testid="manage-domains"
>
  <div
    class="css-7dgci6"
  />
  <table
    class="css-pg3j7d"
  >
    <thead>
      <tr>
        <th
          class="css-c37hkt"
        >
          Name
        </th>
        <th
          class="css-c37hkt"
        >
          Type
        </th>
        <th
          class="css-c37hkt"
        >
          Modified Date
        </th>
        <th
          class="css-19r8pbt"
        >
          Product Master Id
        </th>
        <th
          class="css-19r8pbt"
        >
          Audit
        </th>
        <th
          class="css-19r8pbt"
        >
          AWS Account #
        </th>
        <th
          class="css-19r8pbt"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          home.mujibur
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          Personal
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          2018-01-31 19:43 UTC
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-0"
              name="selfServe-0"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-0"
            />
          </div>
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          111111
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
      </tr>
      <tr>
        <td
          class="css-1vs2r4p"
          color=""
        >
          home.pgote
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          Personal
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          2018-02-15 00:48 UTC
        </td>
        <td
          class="css-84znvz"
          color=""
        />
        <td
          class="css-84znvz"
          color=""
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-1"
              name="selfServe-1"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-1"
            />
          </div>
        </td>
        <td
          class="css-84znvz"
          color=""
        >
          14913436251
        </td>
        <td
          class="css-84znvz"
          color=""
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ManageDomains should render top level domain 1`] = `
<div
  class="css-oqpjdc"
  data-testid="manage-domains"
>
  <div
    class="css-7dgci6"
  />
  <table
    class="css-pg3j7d"
  >
    <thead>
      <tr>
        <th
          class="css-c37hkt"
        >
          Name
        </th>
        <th
          class="css-c37hkt"
        >
          Type
        </th>
        <th
          class="css-c37hkt"
        >
          Modified Date
        </th>
        <th
          class="css-19r8pbt"
        >
          Product Master Id
        </th>
        <th
          class="css-19r8pbt"
        >
          Audit
        </th>
        <th
          class="css-19r8pbt"
        >
          AWS Account #
        </th>
        <th
          class="css-19r8pbt"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          home.mujibur
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          Personal
        </td>
        <td
          class="css-18djig3"
          color="#3570f40D"
        >
          2018-01-31 19:43 UTC
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-0"
              name="selfServe-0"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-0"
            />
          </div>
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        >
          111111
        </td>
        <td
          class="css-1s8u38g"
          color="#3570f40D"
        />
      </tr>
      <tr>
        <td
          class="css-1vs2r4p"
          color=""
        >
          home
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          Top Level
        </td>
        <td
          class="css-1vs2r4p"
          color=""
        >
          2018-02-15 00:48 UTC
        </td>
        <td
          class="css-84znvz"
          color=""
        />
        <td
          class="css-84znvz"
          color=""
        >
          <div
            class="css-v3lvlk-switch denali-switch"
            data-testid="switch-wrapper"
          >
            <input
              disabled=""
              id="switch-selfServe-1"
              name="selfServe-1"
              type="checkbox"
              value="false"
            />
            <label
              for="switch-selfServe-1"
            />
          </div>
        </td>
        <td
          class="css-84znvz"
          color=""
        >
          14913436251
        </td>
        <td
          class="css-84znvz"
          color=""
        />
      </tr>
    </tbody>
  </table>
</div>
`;
